--- a/JeekobsSportCenter_ADMIN/HTML/Dashboard.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Dashboard.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="/CSS/style_Dashboard.css">
-    <link rel="icon" type="image/jpg" href="/Logo/LOGO.png">
+    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/style_Dashboard.css">
+    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/LOGO.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -27,23 +27,23 @@
          </li>
         </div>
         <li>
-          <a href="/HTML/Products.html">Products</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Products.html">Products</a>
           <i class='bx bx-package'></i>
         </li>
         <li>
-          <a href="/HTML/Products.html">Orders</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Orders.html">Orders</a>
           <i class='bx bx-clipboard'></i>
        </li>
         <li>
-            <a href="/HTML/Reviews.html">Reviews</a>
+            <a href="/JeekobsSportCenter_ADMIN/HTML/Reviews.html">Reviews</a>
             <i class='bx bxs-message-alt-detail'></i>
          </li>
         <li>
-            <a href="/HTML/Applicants.html">Applicants</a>
+            <a href="/JeekobsSportCenter_ADMIN/HTML/Applicants.html">Applicants</a>
             <i class='bx bxs-user-badge'></i>
          </li>
           <li>
-            <a href="/HTML/Settings.html">Settings</a>
+            <a href="/JeekobsSportCenter_ADMIN/HTML/Settings.html">Settings</a>
             <i class='bx bxs-cog' ></i>
          </li>
         </ul>
@@ -58,7 +58,7 @@
 <!--Popout Logout-->
 <div class="Form">
   <div class="close-btn">No</div>
-  <form action="/HTML/Admin-Login.html">
+  <form action= "/JeekobsSportCenter_ADMIN/HTML/Admin-Login.html">
     <p>Log out?</p>
     <button type="submit">Yes</button>
   </form>  
@@ -157,6 +157,6 @@
 
     <div class="tag"><p>Dashboard</p></div>
     
-    <script src="/JAVASCRIPT/Logout_Dashboard.js"></script>
+    <script src="/JeekobsSportCenter_ADMIN/JAVASCRIPT/Logout_Dashboard.js"></script>
 </body>
 </html>
