--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orders</title>
-    <link rel="stylesheet" href="/CSS/style_Orders_Pending.css">
-    <link rel="icon" type="image/jpg" href="/Logo/LOGO.png">
+    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/style_Orders_Pending.css">
+    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/LOGO.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -21,11 +21,11 @@
      <div class="navbar">
       <ul>
         <li>
-          <a href="/HTML/Dashboard.html">Dashboard</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Dashboard.html">Dashboard</a>
           <i class='bx bxs-dashboard'></i>
        </li>
       <li>
-        <a href="/HTML/Products.html">Products</a>
+        <a href="/JeekobsSportCenter_ADMIN/HTML/Products.html">Products</a>
         <i class='bx bx-package'></i>
       </li>
       <div class="Orders">
@@ -35,15 +35,15 @@
      </li>
     </div>
       <li>
-          <a href="/HTML/Reviews.html">Reviews</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Reviews.html">Reviews</a>
           <i class='bx bxs-message-alt-detail'></i>
        </li>
       <li>
-          <a href="/HTML/Applicants.html">Applicants</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Applicants.html">Applicants</a>
           <i class='bx bxs-user-badge'></i>
        </li>
         <li>
-          <a href="/HTML/Settings.html">Settings</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Settings.html">Settings</a>
           <i class='bx bxs-cog' ></i>
        </li>
       </ul>
@@ -58,7 +58,7 @@
 <!--Popout Logout-->
 <div class="Form">
   <div class="close-btn">NO</div>
-  <form action="/HTML/Admin-Login.html">
+  <form action="/JeekobsSportCenter_ADMIN/HTML/Admin-Login.html">
     <p>LOGOUT?</p>
     <button type="submit">YES</button>
   </form>  
@@ -71,14 +71,14 @@
     <div class="container">
 
       <div class="nav_bar">
-          <a href="/HTML/Orders.html">All orders</a>
-            <a href="/HTML/Orders_Discpatched.html">Dispatched</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Orders.html">All orders</a>
+            <a href="/JeekobsSportCenter_ADMIN/HTML/Orders_Discpatched.html">Dispatched</a>
 
             <div class="selected"> 
             <a>Pending</a>
           </div>
 
-        <a href="/HTML/Orders_Completed.html">Completed</a>
+        <a href="/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html">Completed</a>
       </div>
 
      <div class="table-scroll">
@@ -217,6 +217,6 @@
 
     <div class="tag"><p>Orders > Pending</p></div>
     
-    <script src="/JAVASCRIPT/Logout_Orders_Pending.js"></script>
+    <script src="/JeekobsSportCenter_ADMIN/JAVASCRIPT/Logout_Orders_Pending.js"></script>
 </body>
 </html>
