--- a/JeekobsSportCenter_ADMIN/HTML/Settings.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Settings.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings</title>
-    <link rel="stylesheet" href="/CSS/style_Settings.css">
-    <link rel="icon" type="image/jpg" href="/Logo/LOGO.png">
+    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/style_Settings.css">
+    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/LOGO.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -21,23 +21,23 @@
      <div class="navbar" id="Nav">
       <ul>
         <li>
-          <a href="/HTML/Dashboard.html">Dashboard</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Dashboard.html">Dashboard</a>
           <i class='bx bxs-dashboard'></i>
        </li>
       <li>
-        <a href="/HTML/Products.html">Products</a>
+        <a href="/JeekobsSportCenter_ADMIN/HTML/Products.html">Products</a>
         <i class='bx bx-package'></i>
       </li>
       <li>
-        <a href="/HTML/Orders.html">Orders</a>
+        <a href="/JeekobsSportCenter_ADMIN/HTML/Orders.html">Orders</a>
         <i class='bx bx-clipboard'></i>
      </li>
       <li>
-          <a href="/HTML/Reviews.html">Reviews</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Reviews.html">Reviews</a>
           <i class='bx bxs-message-alt-detail'></i>
        </li>
       <li>
-          <a href="/HTML/Applicants.html">Applicants</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Applicants.html">Applicants</a>
           <i class='bx bxs-user-badge'></i>
        </li>
        <div class="Settings">
@@ -58,7 +58,7 @@
 <!--Popout Logout-->
 <div class="Form">
   <div class="close-btn">NO</div>
-  <form action="/HTML/Admin-Login.html">
+  <form action="/JeekobsSportCenter_ADMIN/HTML/Admin-Login.html">
     <p>LOGOUT?</p>
     <button type="submit">YES</button>
   </form>  
@@ -73,7 +73,7 @@
     <ul>
       <div class="A_M">
       <li>
-        <a href="/HTML/Acc_Manage.html">Account Management</a>
+        <a href="/JeekobsSportCenter_ADMIN/HTML/Acc_Manage.html">Account Management</a>
         <i class='bx bxs-user-rectangle'></i>
       </li>
     </div>
@@ -89,6 +89,6 @@
 
     <div class="tag"><p>Settings</p></div>
 
-  <script src="/JAVASCRIPT/Logout_Settings.js"></script>
+  <script src="/JeekobsSportCenter_ADMIN/JAVASCRIPT/Logout_Settings.js"></script>
 </body>
 </html>
