--- a/JeekobsSportCenter_ADMIN/HTML/Admin-Login.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Admin-Login.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeekobs Admin Login</title>
-    <link rel="icon" type="image/jpg" href="/Logo/LOGO.png">
+    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/LOGO.png">
     <link rel="stylesheet" href="/CSS/style_Login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
 <body>
     <div class="wrapper">
-    <form action="/HTML/Dashboard.html">
+    <form action="/JeekobsSportCenter_ADMIN/HTML/Dashboard.html">
         <p>Login</p>
         <div class="input-box">
             <input type="text" placeholder="Enter Username" required>
