--- a/JeekobsSportCenter_ADMIN/HTML/Applicants.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Applicants.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Applicants</title>
-    <link rel="stylesheet" href="/CSS/style_Applicants.css">
-    <link rel="icon" type="image/jpg" href="/Logo/LOGO.png">
+    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/style_Applicants.css">
+    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/LOGO.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -21,19 +21,19 @@
      <div class="navbar">
         <ul>
           <li>
-            <a href="/HTML/Dashboard.html">Dashboard</a>
+            <a href="/JeekobsSportCenter_ADMIN/HTML/Dashboard.html">Dashboard</a>
             <i class='bx bxs-dashboard'></i>
          </li>
         <li>
-          <a href="/HTML/Products.html">Products</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Products.html">Products</a>
           <i class='bx bx-package'></i>
         </li>
         <li>
-          <a href="/HTML/Orders.html">Orders</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Orders.html">Orders</a>
           <i class='bx bx-clipboard'></i>
        </li>
         <li>
-            <a href="/HTML/Reviews.html">Reviews</a>
+            <a href="/JeekobsSportCenter_ADMIN/HTML/Reviews.html">Reviews</a>
             <i class='bx bxs-message-alt-detail'></i>
          </li>
        <div class="Applicants">
@@ -43,7 +43,7 @@
          </li>
         </div>
           <li>
-            <a href="/HTML/Settings.html">Settings</a>
+            <a href="/JeekobsSportCenter_ADMIN/HTML/Settings.html">Settings</a>
             <i class='bx bxs-cog' ></i>
          </li>
         </ul>
@@ -58,7 +58,7 @@
 <!--Popout Logout-->
 <div class="Form">
   <div class="close-btn">NO</div>
-  <form action="/HTML/Admin-Login.html">
+  <form action="/JeekobsSportCenter_ADMIN/HTML/Admin-Login.html">
     <p>LOGOUT?</p>
     <button type="submit">YES</button>
   </form>  
@@ -143,6 +143,6 @@
 
     <div class="tag"><p>Applicants</p></div>
     
-    <script src="/JAVASCRIPT/Logout_Applicants.js"></script>
+    <script src="/JeekobsSportCenter_ADMIN/JAVASCRIPT/Logout_Applicants.js"></script>
 </body>
 </html>
