--- a/JeekobsSportCenter_ADMIN/HTML/Products_Basketball.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Products_Basketball.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
-    <link rel="stylesheet" href="/CSS/style_Pro_Basketball.css">
-    <link rel="icon" type="image/jpg" href="/Logo/LOGO.png">
+    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/HTML/Products.html">
+    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/LOGO.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -21,7 +21,7 @@
   <div class="navbar">
    <ul>
      <li>
-       <a href="/HTML/Dashboard.html">Dashboard</a>
+       <a href="/JeekobsSportCenter_ADMIN/HTML/Dashboard.html">Dashboard</a>
        <i class='bx bxs-dashboard'></i>
     </li>
    <div class="Products">
@@ -31,19 +31,19 @@
    </li>
  </div>
    <li>
-     <a href="/HTML/Orders.html">Orders</a>
+     <a href="/JeekobsSportCenter_ADMIN/HTML/Orders.html">Orders</a>
      <i class='bx bx-clipboard'></i>
   </li>
    <li>
-       <a href="/HTML/Reviews.html">Reviews</a>
+       <a href="/JeekobsSportCenter_ADMIN/HTML/Reviews.html">Reviews</a>
        <i class='bx bxs-message-alt-detail'></i>
     </li>
    <li>
-       <a href="/HTML/Applicants.html">Applicants</a>
+       <a href="/JeekobsSportCenter_ADMIN/HTML/Applicants.html">Applicants</a>
        <i class='bx bxs-user-badge'></i>
     </li>
      <li>
-       <a href="/HTML/Settings.html">Settings</a>
+       <a href="/JeekobsSportCenter_ADMIN/HTML/Settings.html">Settings</a>
        <i class='bx bxs-cog' ></i>
     </li>
    </ul>
@@ -58,7 +58,7 @@
 <!--Popout Logout-->
 <div class="Form">
   <div class="close-btn">NO</div>
-  <form action="/HTML/Admin-Login.html">
+  <form action="/JeekobsSportCenter_ADMIN/HTML/Admin-Login.html">
     <p>LOGOUT?</p>
     <button type="submit">YES</button>
   </form>  
@@ -77,15 +77,15 @@
         </div>
 
         <div class="next">
-          <a href="/HTML/Products_Soccerball.html"> <i class='bx bxs-chevron-left bx-rotate-180' ></i> </a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Products_Soccerball.html"> <i class='bx bxs-chevron-left bx-rotate-180' ></i> </a>
         </div>
         <div class="back">
-          <a href="/HTML/Products.html"> <i class='bx bxs-chevron-left'></i> </a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Products.html"> <i class='bx bxs-chevron-left'></i> </a>
         </div>
 
         <div class="Vcontainer">
           <div class="Basketball">
-            <img src="/Products/Basketball/Bball.png" alt="">
+            <img src="/JeekobsSportCenter_ADMIN/Products/Basketball/Bball.png" alt="">
                <p>B_Ball =  1</p>
 
                <div class="Config">
@@ -101,7 +101,7 @@
 
                 </div>
                 <div class="Basketball">
-                   <img src="/Products/Basketball/BShoes.jpg" alt="">
+                   <img src="/JeekobsSportCenter_ADMIN/Products/Basketball/BShoes.jpg" alt="">
                     <p>B_Shoes =  1</p>
 
                     <div class="Config">
@@ -124,6 +124,6 @@
 
     <div class="tag"><p>Products > Basketball</p></div>
     
-    <script src="/JAVASCRIPT/Logout_Basketball.js"></script>
+    <script src="/JeekobsSportCenter_ADMIN/JAVASCRIPT/Logout_Basketball.js"></script>
 </body>
 </html>
