--- a/JeekobsSportCenter_ADMIN/HTML/Reviews.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Reviews.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reviews</title>
-    <link rel="stylesheet" href="/CSS/style_Reviews.css">
-    <link rel="icon" type="image/jpg" href="/Logo/LOGO.png">
+    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/style_Reviews.css">
+    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/LOGO.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -21,15 +21,15 @@
      <div class="navbar">
       <ul>
         <li>
-          <a href="/HTML/Dashboard.html">Dashboard</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Dashboard.html">Dashboard</a>
           <i class='bx bxs-dashboard'></i>
        </li>
       <li>
-        <a href="/HTML/Products.html">Products</a>
+        <a href="/JeekobsSportCenter_ADMIN/HTML/Products.html">Products</a>
         <i class='bx bx-package'></i>
       </li>
       <li>
-        <a href="/HTML/Orders.html">Orders</a>
+        <a href="/JeekobsSportCenter_ADMIN/HTML/Orders.html">Orders</a>
         <i class='bx bx-clipboard'></i>
      </li>
      <div class="Reviews">
@@ -39,11 +39,11 @@
        </li>
       </div>
       <li>
-          <a href="/HTML/Applicants.html">Applicants</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Applicants.html">Applicants</a>
           <i class='bx bxs-user-badge'></i>
        </li>
         <li>
-          <a href="/HTML/Settings.html">Settings</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Settings.html">Settings</a>
           <i class='bx bxs-cog' ></i>
        </li>
       </ul>
@@ -58,7 +58,7 @@
 <!--Popout Logout-->
 <div class="Form">
   <div class="close-btn">NO</div>
-  <form action="/HTML/Admin-Login.html">
+  <form action="/JeekobsSportCenter_ADMIN/HTML/Admin-Login.html">
     <p>LOGOUT?</p>
     <button type="submit">YES</button>
   </form>  
@@ -131,6 +131,6 @@
 
     <div class="tag"><p>Reviews</p></div>
 
-    <script src="/JAVASCRIPT/Logout_Reviews.js"></script>
+    <script src="/JeekobsSportCenter_ADMIN/JAVASCRIPT/Logout_Reviews.js"></script>
 </body>
 </html>
