turning the settings button into a dropdown menu
The settings button contains two links.

--- a/JeekobsSportCenter_ADMIN/HTML/Applicants.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Applicants.html
@@ -42,19 +42,29 @@
             <i class='bx bxs-user-badge'></i>
          </li>
         </div>
+         <!--DORPDOWN-->
+         <ul class="settings-dropdown">
           <li>
-            <a href="/JeekobsSportCenter_ADMIN/HTML/Settings.html">Settings</a>
+            <a>Settings</a>
             <i class='bx bxs-cog' ></i>
+            <div class="arrow"><i class='bx bxs-down-arrow'></i></i></i></div>
+         </li>
+         <div class="product-management">
+         <li>
+          <a href="">Product Management</a>
+          <i class='bx bxs-shopping-bag'></i>
+        </li>
+      </div>
+         <li>
+        <div class="Logout">
+          <button id="show-logout">Logout</button>
+           <i class='bx bxs-log-out' ></i>
+      </div>    
          </li>
         </ul>
-
-         <!--LOGOUT PAGE-->
-      <div class="Logout">
-        <button id="show-logout">Logout</button>
-         <i class='bx bxs-log-out' ></i>
-    </div>
-        <!--LOGOUT PAGE-->
-
+         <!--DORPDOWN-->
+        </ul>
+        
 <!--Popout Logout-->
 <div class="Form">
   <div class="close-btn">NO</div>
