--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Discpatched.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Discpatched.html
@@ -106,7 +106,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -115,7 +115,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -124,7 +124,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -133,7 +133,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -142,7 +142,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -151,7 +151,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -160,7 +160,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -169,7 +169,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+         <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -178,7 +178,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -187,7 +187,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -196,7 +196,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -205,7 +205,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -214,7 +214,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
       </table>
     </div>
