--- a/JeekobsSportCenter_ADMIN/HTML/Products_Basketball.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Products_Basketball.html
@@ -100,7 +100,7 @@
                  <i class='bx bx-plus-circle' ></i>
                   </div>
                 <div class="delete">
-                <a href="">Delete</a>
+                <a href="">Remove</a>
                  <i class='bx bxs-trash' ></i>
                </div>
             </div>
@@ -116,7 +116,7 @@
                        <i class='bx bx-plus-circle' ></i>
                         </div>
                       <div class="delete">
-                      <a href="">Delete</a>
+                      <a href="">Remove</a>
                        <i class='bx bxs-trash' ></i>
                      </div>
                   </div>
