--- a/JeekobsSportCenter_ADMIN/HTML/Products_Soccerball.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Products_Soccerball.html
@@ -101,7 +101,7 @@
                  <i class='bx bx-plus-circle' ></i>
                   </div>
                 <div class="delete">
-                <a href="">Delete</a>
+                <a href="">Remove</a>
                  <i class='bx bxs-trash' ></i>
                </div>
             </div>
@@ -118,7 +118,7 @@
                        <i class='bx bx-plus-circle' ></i>
                         </div>
                       <div class="delete">
-                      <a href="">Delete</a>
+                      <a href="">Remove</a>
                        <i class='bx bxs-trash' ></i>
                      </div>
                   </div>
@@ -135,7 +135,7 @@
                <i class='bx bx-plus-circle' ></i>
                 </div>
               <div class="delete">
-              <a href="">Delete</a>
+              <a href="">Remove</a>
                <i class='bx bxs-trash' ></i>
              </div>
           </div>
@@ -152,7 +152,7 @@
                <i class='bx bx-plus-circle' ></i>
                 </div>
               <div class="delete">
-              <a href="">Delete</a>
+              <a href="">Remove</a>
                <i class='bx bxs-trash' ></i>
              </div>
           </div>
