--- a/JeekobsSportCenter_ADMIN/HTML/Reviews.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Reviews.html
@@ -83,7 +83,7 @@
           <th>username</th>
           <th>Date</th>
           <th>Status</th>
-          <th></th>
+          <th>Actions</th>
         </thead>
         </tr>
           <tr>
@@ -91,42 +91,42 @@
           <td>Name</td>
           <td>address</td>
           <td>date</td>
-          <td></td>
+          <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
           <td>1</td>
           <td>Name</td>
           <td>address</td>
           <td>date</td>  
-          <td></td> 
+          <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
           <td>1</td>
           <td>Name</td>
           <td>address</td>
           <td>date</td>  
-          <td></td>    
+          <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>    
          </tr>
           <tr>
           <td>1</td>
           <td>Name</td>
           <td>address</td>
           <td>date</td>   
-          <td></td>
+          <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
           <td>1</td>
           <td>Name</td>
           <td>address</td>
           <td>date</td>  
-          <td></td>  
+          <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
           <td>1</td>
           <td>Name</td>
           <td>address</td>
           <td>date</td>
-          <td></td>
+          <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
         </table>
       </div>
