--- a/JeekobsSportCenter_ADMIN/HTML/Applicants.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Applicants.html
@@ -90,12 +90,30 @@
         </tr>
           <tr>
           <td>1</td>
-          <td>Name</td>
-          <td>address</td>
-          <td>date</td>
-          <td>1</td>
-          <td>1</td>
-          <td></td>
+          <td><img src="/JeekobsSportCenter_ADMIN/Users/Dave Basa.png" alt="">Dave Basa</td>
+          <td>Basa@gmail.com</td>
+          <td>09914567890</td>
+          <td>Skibidi</td>
+          <td>Inactive</td>
+          <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+         </tr>
+          <tr>
+            <td>2</td>
+            <td><img src="/JeekobsSportCenter_ADMIN/Users/John Xyrus.jpg" alt="">John Xyrus</td>
+            <td>Fuentes123@gmai.com</td>
+            <td>09694201234</td>
+            <td>Female</td>
+            <td>Inactive</td>
+            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+         </tr>
+          <tr>
+            <td>3</td>
+            <td><img src="/JeekobsSportCenter_ADMIN/Users/Cyde Marquez.jpg" alt="">Cyde Marquez</td>
+            <td>Cid69@gmail.com</td>
+            <td>0422567890</td>
+            <td>Gay</td>
+            <td>Active</td>
+            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
             <td>1</td>
@@ -104,7 +122,7 @@
             <td>date</td>
             <td>1</td>
             <td>1</td>
-            <td></td>
+            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
             <td>1</td>
@@ -113,7 +131,7 @@
             <td>date</td>
             <td>1</td>
             <td>1</td>
-            <td></td>
+            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
             <td>1</td>
@@ -122,25 +140,7 @@
             <td>date</td>
             <td>1</td>
             <td>1</td>
-            <td></td>
-         </tr>
-          <tr>
-            <td>1</td>
-            <td>Name</td>
-            <td>address</td>
-            <td>date</td>
-            <td>1</td>
-            <td>1</td>
-            <td></td>
-         </tr>
-          <tr>
-            <td>1</td>
-            <td>Name</td>
-            <td>address</td>
-            <td>date</td>
-            <td>1</td>
-            <td>1</td>
-            <td></td>
+            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
         </table>
       </div>
