--- a/JeekobsSportCenter_ADMIN/HTML/Orders.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders.html
@@ -106,7 +106,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -115,7 +115,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt' id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -124,7 +124,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt' id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -133,7 +133,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -142,7 +142,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></div></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -151,7 +151,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
        </tr>
       </table>
     </div>
