--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html
@@ -107,7 +107,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -116,7 +116,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -125,7 +125,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -134,7 +134,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -143,7 +143,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -152,7 +152,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -161,7 +161,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -170,7 +170,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -179,7 +179,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -188,7 +188,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -197,7 +197,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -206,7 +206,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
         <tr>
         <td>1</td>
@@ -215,7 +215,7 @@
         <td>date</td>
         <td>price</td>
         <td>status</td>
-        <td><a href=""><i class='bx bx-trash-alt'></i></a></td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
        </tr>
       </table>
     </div>
