--- a/JeekobsSportCenter_ADMIN/HTML/Products.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Products.html
@@ -98,7 +98,7 @@
                     <i class='bx bx-plus-circle' ></i>
                </div>
                    <div class="delete">
-                   <a href="">Delete</a>
+                   <a href="">Remove</a>
                     <i class='bx bxs-trash' ></i>
                </div>
               </div>
@@ -114,7 +114,7 @@
                        <i class='bx bx-plus-circle' ></i>
                         </div>
                       <div class="delete">
-                      <a href="">Delete</a>
+                      <a href="">Remove</a>
                        <i class='bx bxs-trash' ></i>
                      </div>
                   </div>
@@ -130,7 +130,7 @@
                <i class='bx bx-plus-circle' ></i>
                 </div>
               <div class="delete">
-              <a href="">Delete</a>
+              <a href="">Remove</a>
                <i class='bx bxs-trash' ></i>
              </div>
           </div>
@@ -146,7 +146,7 @@
                <i class='bx bx-plus-circle' ></i>
                 </div>
               <div class="delete">
-              <a href="">Delete</a>
+              <a href="">Remove</a>
                <i class='bx bxs-trash' ></i>
              </div>
           </div>
