added new users on every table

--- a/JeekobsSportCenter_ADMIN/HTML/Products_Basketball.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Products_Basketball.html
@@ -39,7 +39,7 @@
        <i class='bx bxs-message-alt-detail'></i>
     </li>
    <li>
-       <a href="/JeekobsSportCenter_ADMIN/HTML/Applicants.html">Applicants</a>
+       <a href="/JeekobsSportCenter_ADMIN/HTML/Users.html">Users</a>
        <i class='bx bxs-user-badge'></i>
     </li>
      <!--DORPDOWN-->
