--- a/JeekobsSportCenter_ADMIN/HTML/Reviews.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Reviews.html
@@ -39,7 +39,7 @@
        </li>
       </div>
       <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Applicants.html">Applicants</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Users.html">Users</a>
           <i class='bx bxs-user-badge'></i>
        </li>
         <!--DORPDOWN-->
@@ -87,45 +87,38 @@
         </thead>
         </tr>
           <tr>
-          <td>1</td>
-          <td>Name</td>
-          <td>address</td>
-          <td>date</td>
+          <td id="review-name">Their product quality is good...</td>
+          <td><img src="/JeekobsSportCenter_ADMIN/Users/Coco Martin.png" alt="">Coco Martin</td>
+          <td>Quezon City</td>
+          <td>Active</td>
           <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
-          <td>1</td>
-          <td>Name</td>
-          <td>address</td>
-          <td>date</td>  
+          <td id="review-name">This Jeekobs Sport Center has a good system of services...</td>
+          <td><img src="/JeekobsSportCenter_ADMIN/Users/John lloyd Cruz.jpg" alt="">John Lloyd Cruz</td>
+          <td>Pasay City</td>
+          <td>Active</td>  
           <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
-          <td>1</td>
-          <td>Name</td>
-          <td>address</td>
-          <td>date</td>  
+          <td id="review-name">Their Interface is beginner friendly...</td>
+          <td><img src="/JeekobsSportCenter_ADMIN/Users/Juniboy.jpg" alt="">Juniboy</td>
+          <td>Muntinlupa</td>
+          <td>Active</td>  
           <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>    
          </tr>
           <tr>
-          <td>1</td>
-          <td>Name</td>
-          <td>address</td>
-          <td>date</td>   
+          <td id="review-name">They have the simplest design...</td>
+          <td><img src="/JeekobsSportCenter_ADMIN/Users/Cong.png" alt="">Cong</td>
+          <td>Bacoor, Cavite</td>
+          <td>Banned</td>   
           <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
-          <td>1</td>
-          <td>Name</td>
-          <td>address</td>
-          <td>date</td>  
-          <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-         </tr>
-          <tr>
-          <td>1</td>
-          <td>Name</td>
-          <td>address</td>
-          <td>date</td>
+          <td id="review-name">Overall, this website is best...</td>
+          <td><img src="/JeekobsSportCenter_ADMIN/Users/Jackie Chan.png" alt="">Jackie Chan</td>
+          <td>Beverly Hills</td>
+          <td>Banned</td>   
           <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
         </table>
