--- a/JeekobsSportCenter_ADMIN/HTML/Users.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Users.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Applicants</title>
-    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/style_Applicants.css">
+    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/Style_Users.css">
     <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/LOGO.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -36,9 +36,9 @@
             <a href="/JeekobsSportCenter_ADMIN/HTML/Reviews.html">Reviews</a>
             <i class='bx bxs-message-alt-detail'></i>
          </li>
-       <div class="Applicants">
+       <div class="Users">
         <li>
-            <a>Applicants</a>
+            <a>Users</a>
             <i class='bx bxs-user-badge'></i>
          </li>
         </div>
@@ -93,16 +93,16 @@
           <td><img src="/JeekobsSportCenter_ADMIN/Users/Dave Basa.png" alt="">Dave Basa</td>
           <td>Basa@gmail.com</td>
           <td>09914567890</td>
-          <td>Skibidi</td>
+          <td>Male</td>
           <td>Inactive</td>
           <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
             <td>2</td>
             <td><img src="/JeekobsSportCenter_ADMIN/Users/John Xyrus.jpg" alt="">John Xyrus</td>
-            <td>Fuentes123@gmai.com</td>
+            <td>Fuentes123@gmail.com</td>
             <td>09694201234</td>
-            <td>Female</td>
+            <td>Male</td>
             <td>Inactive</td>
             <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
@@ -111,35 +111,35 @@
             <td><img src="/JeekobsSportCenter_ADMIN/Users/Cyde Marquez.jpg" alt="">Cyde Marquez</td>
             <td>Cid69@gmail.com</td>
             <td>0422567890</td>
-            <td>Gay</td>
+            <td>Male</td>
             <td>Active</td>
             <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
-            <td>1</td>
-            <td>Name</td>
-            <td>address</td>
-            <td>date</td>
-            <td>1</td>
-            <td>1</td>
+            <td>4</td>
+            <td><img src="/JeekobsSportCenter_ADMIN/Users/JohnHarold.png" alt="">John harold</td>
+            <td>Remigio@gmail.com</td>
+            <td>09068734561</td>
+            <td>Male</td>
+            <td>Active</td>
             <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
-            <td>1</td>
-            <td>Name</td>
-            <td>address</td>
-            <td>date</td>
-            <td>1</td>
-            <td>1</td>
+            <td>5</td>
+            <td><img src="/JeekobsSportCenter_ADMIN/Users/Baby Sideeye.jpg" alt="">Baby Side-eye</td>
+            <td>gogogaga@gmail.com</td>
+            <td>01234567890</td>
+            <td>Male</td>
+            <td>Inactive</td>
             <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
-            <td>1</td>
-            <td>Name</td>
-            <td>address</td>
-            <td>date</td>
-            <td>1</td>
-            <td>1</td>
+            <td>6</td>
+            <td><img src="/JeekobsSportCenter_ADMIN/Users/Hitler Hutcherson.jpg" alt="">Hitler Hutcherson</td>
+            <td>GermanNazi@gmail.com</td>
+            <td>09929112468</td>
+            <td>Male</td>
+            <td>Inactive</td>
             <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
         </table>
@@ -147,8 +147,8 @@
     </div>
      </div>
 
-    <div class="tag"><p>Applicants</p></div>
+    <div class="tag"><p>Users</p></div>
     
-    <script src="/JeekobsSportCenter_ADMIN/JAVASCRIPT/Logout_Applicants.js"></script>
+    <script src="/JeekobsSportCenter_ADMIN/JAVASCRIPT/Logout_Users.js"></script>
 </body>
 </html>
