--- a/JeekobsSportCenter_ADMIN/HTML/Orders.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders.html
@@ -39,7 +39,7 @@
           <i class='bx bxs-message-alt-detail'></i>
        </li>
       <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Applicants.html">Applicants</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Users.html">Users</a>
           <i class='bx bxs-user-badge'></i>
        </li>
         <!--DORPDOWN-->
@@ -99,58 +99,103 @@
         <th>Action</th>
       </thead>
       </tr>
-        <tr>
+      <tr>
         <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Al-steven Tumingbang.jpg" alt="">Al-steven Tumingbang</td>
+        <td>Zamboanga City</td>
+        <td>02/04/2024</td>
+        <td>55$</td>
+        <td>Completed</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Allen Tan.jpg" alt="">Allen Tan</td>
+        <td>Zamboanga City</td>
+        <td>11/02/2024</td>
+        <td>60$</td>
+        <td>Dispatched</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt' id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Anthony Marc Huesca.jpg" alt="">Anthony Marc Huesca</td>
+        <td>Zamboanga City</td>
+        <td>10/03/2024</td>
+        <td>31$</td>
+        <td>Completed</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt' id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Art Cadiz.jpg" alt="">Art Michael Cadiz</td>
+        <td>Zamboanga City</td>
+        <td>01//04/2024</td>
+        <td>56$</td>
+        <td>Completed</td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Azief Saclolo.jpg" alt="">Azief Saclolo</td>
+        <td>Zamboanga City</td>
+        <td>11/04/2024</td>
+        <td>100$</td>
+        <td>Pending</td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></div></a></td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Boy Ribcage.jpg" alt="">Boy Ribcage</td>
+        <td>Zamboanga City</td>
+        <td>09/12/2023</td>
+        <td>35$</td>
+        <td>Pending</td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Caloocan Boy.jpg" alt="">Caloocan Boy</td>
+        <td>Zamboanga City</td>
         <td>date</td>
-        <td>price</td>
-        <td>status</td>
+        <td>68$</td>
+        <td>Dispatched</td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Dean Reigh Billedo.jpg" alt="">Dean Reigh Billedo</td>
+        <td>Zamboanga City</td>
+        <td>04/02/2024</td>
+        <td>45$</td>
+        <td>Completed</td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/John Rizzler.jpg" alt="">John Harold Remigio</td>
+        <td>Zamboanga City</td>
+        <td>06/02/2024</td>
+        <td>11$</td>
+        <td>Completed</td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
+      </tr>
+      <tr>
+        <td>10</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Gio Guevarra.jpg" alt="">Gioiel Guevarra</td>
+        <td>Zamboanga City</td>
+        <td>05/01/2024</td>
+        <td>25$</td>
+        <td>Dispatched</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
        </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></div></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
+       <tr>
+        <td>11</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Mudrikal Sharief.jpg" alt="">Mudrikal Shrarief</td>
+        <td>Zamboanga City</td>
+        <td>01/03/2024</td>
+        <td>10$</td>
+        <td>Pending</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
        </tr>
       </table>
