--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html
@@ -39,7 +39,7 @@
           <i class='bx bxs-message-alt-detail'></i>
        </li>
       <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Applicants.html">Applicants</a>
+          <a href="/JeekobsSportCenter_ADMIN/HTML/Users.html">Users</a>
           <i class='bx bxs-user-badge'></i>
        </li>
        <!--DORPDOWN-->
@@ -101,122 +101,32 @@
       </thead>
       </tr>
       <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
-       </tr>
+          <td>5</td>
+          <td><img src="/JeekobsSportCenter_ADMIN/Users/Azief Saclolo.jpg" alt="">Azief Saclolo</td>
+          <td>Zamboanga City</td>
+          <td>11/04/2024</td>
+          <td>100$</td>
+          <td>Pending</td>
+          <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></div></a></td>
+      </tr>
+      <tr>
+        <td>11</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Mudrikal Sharief.jpg" alt="">Mudrikal Shrarief</td>
+        <td>Zamboanga City</td>
+        <td>01/03/2024</td>
+        <td>10$</td>
+        <td>Pending</td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Boy Ribcage.jpg" alt="">Boy Ribcage</td>
+        <td>Zamboanga City</td>
+        <td>09/12/2023</td>
+        <td>35$</td>
+        <td>Pending</td>
+        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
+      </tr>
       </table>
     </div>
   </div>
