making an admin photo

--- a/JeekobsSportCenter_ADMIN/HTML/Dashboard.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Dashboard.html
@@ -14,7 +14,7 @@
        <div class="box">
          <div class="profile">
             <p>Admin</p>
-            <i class='bx bxs-user' ></i>
+            <img src="/JeekobsSportCenter_ADMIN/Users/Admin.jpg" alt="">
          </div>
        </div>
 
@@ -118,52 +118,44 @@
       </tr>
         <tr>
         <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Zenujin.jpg" alt="">Zenujin</td>
+        <td>Beruu@gmail.com</td>
+        <td>69$</td>
+        <td>Pending</td>
+        <td>30/04/2024</td>
        </tr>
         <tr>
         <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>       
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Shampoo.jpg" alt="">Shampoo Girl</td>
+        <td>Palmolive@gmail.com</td>
+        <td>9$</td>
+        <td>Completed</td>
+        <td>20/04/2024</td>
        </tr>
         <tr>
         <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>       
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/kenneth Dominguez.jpg" alt="">Kenneth Dominguez</td>
+        <td>Dominguez@gmail.com</td>
+        <td>40$</td>
+        <td>Dispatched</td>
+        <td>10/04/2024</td>
        </tr>
         <tr>
         <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>       
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Herwayne Cawili.jpg" alt="">Herwayne Cawili</td>
+        <td>Keerst@gmail.com</td>
+        <td>20$</td>
+        <td>Pending</td>
+        <td>15/04/2024</td>
        </tr>
         <tr>
         <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>       
-       </tr>
-        <tr>
-        <td>1</td>
-        <td>Name</td>
-        <td>address</td>
-        <td>date</td>
-        <td>price</td>
-        <td>status</td>
-       </tr>
+        <td><img src="/JeekobsSportCenter_ADMIN/Users/Little Girl.jpg" alt="">Cry Girl</td>
+        <td>Iyak@gmail.com</td>
+        <td>27$</td>
+        <td>Completed</td>
+        <td>29/04/2024</td>
+       </tr>     
       </table>
     </div>
   </div>
