--- a/JeekobsSportCenter_ADMIN/HTML/Orders.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders.html
@@ -14,7 +14,7 @@
        <div class="box">
          <div class="profile">
             <p>Admin</p>
-            <i class='bx bxs-user' ></i>
+            <img src="/JeekobsSportCenter_ADMIN/Users/Admin.jpg" alt="">
          </div>
        </div>
 
