--- a/JeekobsSportCenter_ADMIN/HTML/Reviews.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Reviews.html
@@ -14,7 +14,7 @@
        <div class="box">
          <div class="profile">
             <p>Admin</p>
-            <i class='bx bxs-user' ></i>
+            <img src="/JeekobsSportCenter_ADMIN/Users/Admin.jpg" alt="">
          </div>
        </div>
 
@@ -111,14 +111,14 @@
           <td id="review-name">They have the simplest design...</td>
           <td><img src="/JeekobsSportCenter_ADMIN/Users/Cong.png" alt="">Cong</td>
           <td>Bacoor, Cavite</td>
-          <td>Banned</td>   
+          <td>Removed</td>   
           <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
           <tr>
-          <td id="review-name">Overall, this website is best...</td>
+          <td id="review-name">Overall, this website is best WOW!</td>
           <td><img src="/JeekobsSportCenter_ADMIN/Users/Jackie Chan.png" alt="">Jackie Chan</td>
           <td>Beverly Hills</td>
-          <td>Banned</td>   
+          <td>Removed</td>   
           <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
          </tr>
         </table>
