--- a/JeekobsSportCenter_ADMIN/HTML/Users.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Users.html
@@ -82,8 +82,8 @@
         <table id="T1" class="table">
         <tr>
           <thead>
-          <th>Employee ID</th>
-          <th>Employee Name</th>
+          <th>User_ID</th>
+          <th>Username</th>
           <th>Email Address</th>
           <th>Contact Number</th>
           <th>Gender</th>
