--- a/JeekobsSportCenter_ADMIN/HTML/Dashboard.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Dashboard.html
@@ -69,12 +69,14 @@
         <!--LOGOUT PAGE-->
 
 <!--Popout Logout-->
+<div class="overlay">
 <div class="Form">
   <div class="close-btn">No</div>
   <form action= "/JeekobsSportCenter_ADMIN/HTML/Admin-Login.html">
     <p>Log out?</p>
     <button type="submit">Yes</button>
   </form>  
+</div>
 </div>
 <!--Popout Logout-->
 
@@ -166,6 +168,6 @@
 
    
     
-    <script src="/JeekobsSportCenter_ADMIN/JAVASCRIPT/Logout_Dashboard.js"></script>
+    <script src="/JAVASCRIPT/Logout_Dashboard.js"></script>
 </body>
 </html>
